<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f5"

    android:orientation="vertical">

    <include layout="@layout/view_toolbar_common" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="提现金额"
        android:textColor="@color/green_03"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:text="￥"
            android:textColor="@color/green_03"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/withdraw_txt_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入提现金额"
            android:inputType="numberDecimal"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black_32"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/withdraw_txt_withdraw_info"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="可提现金额￥0.00,"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="全部提现"
            android:textColor="#00303F"
            android:textSize="13dp" />
    </LinearLayout>

    <com.android.nana.ui.RelativeRadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/radio_button_bg_blue_selector"
            android:paddingLeft="5dp"
            android:text="@string/ali_pay"
            android:textColor="@drawable/radio_button_text_blue_selector" />

        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:background="@color/grey_f5"></View>

        <RadioButton
            android:id="@+id/radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/radio_button_bg_blue_selector"
            android:text="@string/bank"
            android:textColor="@drawable/radio_button_text_blue_selector" />

    </com.android.nana.ui.RelativeRadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content"
        android:textColor="#00303F"
        android:drawableLeft="@drawable/icon_alpay"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:text="    提现到支付宝" />

    <LinearLayout
        android:id="@+id/layout_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="收款账户"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/withdraw_txt_select_bank"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_enter"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="选择银行卡"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_ali_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="姓名"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/tv_name"
            android:background="@drawable/prompt" />

        <EditText
            android:id="@+id/ali_pay_account"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_below="@id/tv_name"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="输入支付宝账号"
            android:lines="1"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/black_32"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:text="提现密码"
            android:textColor="@color/green_03"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/withdraw_txt_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入提现密码"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black_32"
            android:textSize="15sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_withdraw_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/wallet_tv"
        android:textColor="#00303F"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_withdraw_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="@dimen/sp_6"
        android:textColor="#888888"
        android:textSize="@dimen/sp_12" />


    <TextView
        android:id="@+id/tv_withdraw_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#888888"
        android:textSize="@dimen/sp_12" />


    <com.android.nana.widget.StateButton
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="37dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="申请提现"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:normalBackgroundColor="@color/main_blue"
        app:radiusStateButton="4dp" />

</LinearLayout>
